--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,44 +58,52 @@ a {
 
 a:hover {
   opacity: 0.6;
+  -webkit-filter: drop-shadow(0px 0px 10px #50dcfd);
+          filter: drop-shadow(0px 0px 10px #50dcfd);
 }
 
 header {
-  width: 100%;
-  padding: 16px 40px;
-  background-color: #000;
   position: fixed;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 16px 0;
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 99;
+  border-bottom: 1px solid #fff;
+}
+
+header .wrapper {
+  width: 75%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-header h1 {
+header .wrapper h1 {
   width: 92px;
 }
 
-header nav {
+header .wrapper nav {
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 500;
   font-size: 20px;
 }
 
-header nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header nav ul li {
+header .wrapper nav ul li {
   margin-left: 40px;
 }
 
 header .badges {
-  width: 12.5rem;
   position: absolute;
   top: 80px;
   right: 100px;
+  width: 12.5rem;
+  display: none;
 }
 
 header .badges .badge {
@@ -107,12 +115,18 @@ header .badges .badge {
   cursor: pointer;
 }
 
-main {
-  padding-top: 90px;
+main .main_kv {
+  position: relative;
+}
+
+main .main_kv video {
+  width: 100%;
+  position: absolute;
+  top: 0;
 }
 
 main .about {
-  padding-top: 80px;
+  padding-top: 1500px;
 }
 
 main .about h3 {
