--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -2,23 +2,33 @@
 
 // COMMOM
 
-body {
-  font-size: 16px;
-  font-family: "Noto Serif KR", serif;
-  font-weight: 400;
-  background-color: #000;
-  color: #fff;
+html {
   scroll-behavior: smooth;
-}
+  body {
+    font-size: 16px;
+    font-family: "Noto Serif KR", serif;
+    font-weight: 400;
+    background-color: #000;
+    color: #fff;
+  }
 
-p {
-  line-height: 1.75em;
-  margin-top: 24px;
-}
+  p {
+    line-height: 1.6em;
+    margin: 2em;
+  }
 
-img {
-  width: 100%;
-  height: auto;
+  img {
+    width: 100%;
+  }
+
+  a {
+    transition: 0.3s;
+  }
+
+  a:hover {
+    opacity: 0.6;
+    // filter: drop-shadow(0px 0px 10px #50dcfd);
+  }
 }
 
 .flex {
@@ -27,10 +37,9 @@ img {
 }
 
 .inner {
-  width: 90%;
-  max-width: 980px;
-  margin: 0 auto;
   position: relative;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .youtube {
@@ -52,14 +61,65 @@ img {
   text-align: center;
 }
 
-a {
-  transition: 0.3s;
+.swiper {
+  width: 80%;
+  height: 600px;
 }
 
-a:hover {
-  opacity: 0.6;
-  filter: drop-shadow(0px 0px 10px #50dcfd);
-}
+// main {
+//   .background__color__about {
+//     background-image: url("https://www.wallpapertip.com/wmimgs/4-45700_data-src-space-wallpaper-4k.jpg");
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     height: 150vh;
+//     // position: relative;
+//   }
+//   .background__color__movie {
+//     background-image: url("https://www.wallpapertip.com/wmimgs/8-88939_2560x1440-18-hd-space-wallpapers-4k-ultra-hd.jpg");
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     height: 150vh;
+//     // height: 150vh;
+//   }
+//   .background__color__live {
+//     background-image: url("https://www.wallpapertip.com/wmimgs/4-45493_v63696y-universe-wallpaper-desktop-desktop-background-universe.jpg");
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     height: 150vh;
+//   }
+//   .background__color__exhibition {
+//     background-image: url("https://www.wallpapertip.com/wmimgs/4-45493_v63696y-universe-wallpaper-desktop-desktop-background-universe.jpg");
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     height: 150vh;
+//   }
+//   .background__color__sales {
+//     background-image: url("https://www.wallpapertip.com/wmimgs/1-15787_download-free-hd-earth-from-space-desktop-wallpaper.png");
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     height: 150vh;
+//   }
+//   .background__color__gallery {
+//     background-image: url("https://www.wallpapertip.com/wmimgs/4-45700_data-src-space-wallpaper-4k.jpg");
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+//     height: 150vh;
+//   }
+
+//   .background__color__cover {
+//     width: 100%;
+//     // height: 150vh;
+//     position: absolute;
+//     background-color: rgba(0, 0, 0, 0.7);
+//     // z-index: 1;
+//   }
+// }
 
 // HEADER
 
@@ -70,10 +130,10 @@ header {
   padding: 16px 0;
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 99;
-  border-bottom: 1px solid #fff; // 확인용
+  // border-bottom: 1px solid #fff; // 확인용
 
   .wrapper {
-    width: 75%;
+    width: 70%;
     justify-content: space-between;
     align-items: center;
 
@@ -89,6 +149,16 @@ header {
       ul {
         li {
           margin-left: 40px;
+          a {
+            display: flex;
+            flex-direction: column;
+            span {
+              padding-top: 8px;
+              font-size: 12px;
+              text-align: center;
+              color: #50dcfd;
+            }
+          }
         }
       }
     }
@@ -96,50 +166,51 @@ header {
 
   .badges {
     position: absolute;
-    top: 80px;
-    right: 100px;
+    top: 100px;
+    right: 10px;
     width: 12.5rem;
-    display: none;
+    // display: none;
 
     .badge {
       border-radius: 10px;
       overflow: hidden;
       margin-bottom: 12px;
-      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
-      cursor: pointer;
+      box-shadow: 0 0 10px rgba(80, 221, 253, 0.363);
     }
   }
 }
 
 // MAIN
 main {
-  // padding-top: 90px;
-
   .main_kv {
-    position: relative;
-
     video {
       width: 100%;
-      position: absolute;
       top: 0;
     }
   }
 
   .about {
-    padding-top: 1500px;
+    padding: 90px 0;
 
     h3 {
       margin-top: 4rem;
       font-size: 18px;
+      opacity: 1;
     }
 
     ul {
       margin-top: 24px;
       justify-content: space-between;
+      opacity: 1;
 
       li {
         width: 12.25rem;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
       }
 
       li:hover {
@@ -151,15 +222,19 @@ main {
       }
 
       li .text {
-        margin-top: -80px;
         position: absolute;
+        width: 100%;
+        margin-top: -80px;
         font-weight: 400;
-      }
-
-      li div time {
-        line-height: 2em;
-        color: #2ef4f4;
-        font-size: 14px;
+        text-align: center;
+        p {
+          // text-align: center;
+        }
+        time {
+          line-height: 2em;
+          color: #2ef4f4;
+          font-size: 14px;
+        }
       }
     }
 
@@ -193,6 +268,7 @@ main {
       .back img {
         position: absolute;
         height: 80%;
+        border-radius: 5px;
       }
     }
 
@@ -207,7 +283,7 @@ main {
   }
 
   .movie {
-    padding-top: 100px;
+    padding: 90px 0;
 
     figure {
       margin-top: 4rem;
@@ -216,7 +292,7 @@ main {
   }
 
   .live {
-    padding-top: 80px;
+    padding: 90px 0;
 
     .live_box {
       margin-top: 4rem;
@@ -224,7 +300,7 @@ main {
   }
 
   .exhibition {
-    padding-top: 80px;
+    padding: 90px 0;
 
     dl {
       width: 100%;
@@ -271,7 +347,7 @@ main {
   }
 
   .sales {
-    padding-top: 80px;
+    padding: 90px 0;
 
     dl {
       width: 100%;
@@ -307,7 +383,7 @@ main {
   }
 
   .gallery {
-    padding-top: 90px;
+    padding: 90px 0;
 
     a img {
       margin-top: 3rem;
@@ -316,7 +392,7 @@ main {
   }
 
   .othersite {
-    padding-top: 90px;
+    padding: 90px 0;
 
     ul {
       justify-content: center;
@@ -331,7 +407,9 @@ main {
 
 //FOOTER
 footer {
-  font-size: 14px;
-  padding-top: 60px;
-  padding-bottom: 80px;
+  font-size: 0.875em;
+  padding: 1em;
+  p {
+    margin: 0px;
+  }
 }
