--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -4,6 +4,7 @@
 
 html {
   scroll-behavior: smooth;
+
   body {
     font-size: 16px;
     font-family: "Noto Serif KR", serif;
@@ -38,7 +39,7 @@ html {
 
 .inner {
   position: relative;
-  width: 70%;
+  width: 65%;
   margin: 0 auto;
 }
 
@@ -59,11 +60,6 @@ html {
 
 .center {
   text-align: center;
-}
-
-.swiper {
-  width: 80%;
-  height: 600px;
 }
 
 // main {
@@ -130,7 +126,6 @@ header {
   padding: 16px 0;
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 99;
-  // border-bottom: 1px solid #fff; // 확인용
 
   .wrapper {
     width: 70%;
@@ -149,9 +144,11 @@ header {
       ul {
         li {
           margin-left: 40px;
+
           a {
             display: flex;
             flex-direction: column;
+
             span {
               padding-top: 8px;
               font-size: 12px;
@@ -218,18 +215,20 @@ main {
       }
 
       li img {
-        filter: drop-shadow(0px 0px 20px #50dcfd);
+        filter: drop-shadow(0px 0px 10px #50dcfd);
       }
 
       li .text {
         position: absolute;
         width: 100%;
-        margin-top: -80px;
+        margin-top: -50px;
         font-weight: 400;
         text-align: center;
+
         p {
-          // text-align: center;
+          margin: auto 0;
         }
+
         time {
           line-height: 2em;
           color: #2ef4f4;
@@ -238,7 +237,7 @@ main {
       }
     }
 
-    .card1 {
+    .card {
       position: relative;
       perspective: 600px;
       display: block;
@@ -272,21 +271,20 @@ main {
       }
     }
 
-    .card1:hover .front {
-      transform: rotateY(180deg);
-    }
+    // .card:hover .front {
+    //   transform: rotateY(180deg);
+    // }
 
-    .card1:hover .back {
-      transform: rotateY(0deg);
-      z-index: 1;
-    }
+    // .card:hover .back {
+    //   transform: rotateY(0deg);
+    //   z-index: 1;
+    // }
   }
 
   .movie {
     padding: 90px 0;
 
     figure {
-      margin-top: 4rem;
       border: 1px solid #2ef4f4;
     }
   }
@@ -295,26 +293,52 @@ main {
     padding: 90px 0;
 
     .live_box {
-      margin-top: 4rem;
     }
   }
 
+  // 전시전
   .exhibition {
     padding: 90px 0;
 
-    dl {
+    .exhibition_contents {
+      align-items: center;
       width: 100%;
-      margin: 40px 0 0 0;
-      justify-content: space-between;
+      position: relative;
 
-      dt {
-        width: 18%;
-        margin: 0 0 10px 0;
+      .instructions {
+        width: 60%;
+
+        .table {
+          // border: 2px solid orange;
+          margin: 10px;
+
+          .column {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+
+            div:nth-child(1) {
+              border: 2px solid #2ef4f43a;
+              border-radius: 10px 0 10px 0;
+              width: 80px;
+              text-align: center;
+              padding: 8px 5px;
+            }
+
+            div:nth-child(2) {
+              width: 80%;
+              margin-left: 10px;
+            }
+          }
+        }
       }
 
-      dd {
-        width: 80%;
-        line-height: 48px;
+      .maps {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 40%;
+        // background-color: #156;
       }
     }
 
@@ -323,7 +347,7 @@ main {
       justify-content: space-between;
 
       li {
-        width: calc(96% / 2);
+        width: calc(96% / 3);
       }
     }
 
@@ -409,6 +433,7 @@ main {
 footer {
   font-size: 0.875em;
   padding: 1em;
+
   p {
     margin: 0px;
   }
