--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -62,6 +62,18 @@ html {
   text-align: center;
 }
 
+.slider {
+  // padding-top: 3rem;
+  // justify-content: space-between;
+
+  div {
+    // width: calc(96% / 3);
+    img {
+      width: calc(96% / 3);
+    }
+  }
+}
+
 // main {
 //   .background__color__about {
 //     background-image: url("https://www.wallpapertip.com/wmimgs/4-45700_data-src-space-wallpaper-4k.jpg");
@@ -386,15 +398,6 @@ main {
       dd {
         width: 80%;
         line-height: 48px;
-      }
-    }
-
-    ul {
-      padding-top: 3rem;
-      justify-content: space-between;
-
-      li {
-        width: calc(96% / 3);
       }
     }
 
