--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,9 +51,11 @@ html a:hover {
 .youtube iframe {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 1px solid #2ef4f4;
 }
 
@@ -63,9 +65,13 @@ html a:hover {
 
 .swiper-container {
   width: 100%;
-  background-color: #156;
   overflow: hidden;
   margin-top: 2em;
+}
+
+.swiper-container img:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 header {
@@ -144,23 +150,13 @@ main .about {
   padding: 90px 0;
 }
 
-main .about h3 {
-  margin-top: 4rem;
-  font-size: 18px;
-  opacity: 1;
-}
-
 main .about ul {
   margin-top: 24px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  opacity: 1;
 }
 
 main .about ul li {
-  width: 12.25rem;
   position: relative;
+  width: 12.25rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -174,11 +170,11 @@ main .about ul li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  opacity: 1;
 }
 
 main .about ul li:hover {
   cursor: pointer;
+  opacity: 0.6;
 }
 
 main .about ul li img {
@@ -189,7 +185,7 @@ main .about ul li img {
 main .about ul li .text {
   position: absolute;
   width: 100%;
-  margin-top: -50px;
+  margin-top: -60px;
   font-weight: 400;
   text-align: center;
 }
@@ -250,8 +246,21 @@ main .movie {
   padding: 90px 0;
 }
 
-main .movie figure {
+main .movie .movie_main {
+  position: relative;
   border: 1px solid #2ef4f4;
+}
+
+main .movie .movie_main .movie_blank {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  vertical-align: text-bottom;
+  background-color: #156;
+  font-size: 50px;
 }
 
 main .live {
@@ -340,31 +349,6 @@ main .exhibition .note h3 {
 
 main .sales {
   padding: 90px 0;
-}
-
-main .sales dl {
-  width: 100%;
-  margin: 40px 0 0 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-main .sales dl dt {
-  width: 18%;
-  margin: 0 0 10px 0;
-}
-
-main .sales dl dd {
-  width: 80%;
-  line-height: 48px;
-}
-
-main .sales .otherItem {
-  padding-top: 3rem;
-  display: block;
-  margin: auto;
-  width: 50%;
 }
 
 main .gallery {
