--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -52,9 +52,10 @@ html {
 .youtube iframe {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
   border: 1px solid #2ef4f4;
 }
 
@@ -121,9 +122,12 @@ html {
 // swiper
 .swiper-container {
   width: 100%;
-  background-color: #156;
   overflow: hidden;
   margin-top: 2em;
+  img:hover {
+    opacity: 0.6;
+    cursor: pointer;
+  }
 }
 
 // HEADER
@@ -198,29 +202,21 @@ main {
   .about {
     padding: 90px 0;
 
-    h3 {
-      margin-top: 4rem;
-      font-size: 18px;
-      opacity: 1;
-    }
-
     ul {
       margin-top: 24px;
-      justify-content: space-between;
-      opacity: 1;
 
       li {
-        width: 12.25rem;
         position: relative;
+        width: 12.25rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        opacity: 1;
       }
 
       li:hover {
         cursor: pointer;
+        opacity: 0.6;
       }
 
       li img {
@@ -230,7 +226,7 @@ main {
       li .text {
         position: absolute;
         width: 100%;
-        margin-top: -50px;
+        margin-top: -60px;
         font-weight: 400;
         text-align: center;
 
@@ -293,8 +289,21 @@ main {
   .movie {
     padding: 90px 0;
 
-    figure {
+    .movie_main {
+      position: relative;
       border: 1px solid #2ef4f4;
+
+      .movie_blank {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        vertical-align: text-bottom;
+        background-color: #156;
+        font-size: 50px;
+      }
     }
   }
 
@@ -381,29 +390,6 @@ main {
 
   .sales {
     padding: 90px 0;
-
-    dl {
-      width: 100%;
-      margin: 40px 0 0 0;
-      justify-content: space-between;
-
-      dt {
-        width: 18%;
-        margin: 0 0 10px 0;
-      }
-
-      dd {
-        width: 80%;
-        line-height: 48px;
-      }
-    }
-
-    .otherItem {
-      padding-top: 3rem;
-      display: block;
-      margin: auto;
-      width: 50%;
-    }
   }
 
   .gallery {
