--- a/CSS/style.css
+++ b/CSS/style.css
@@ -251,18 +251,6 @@ main .movie .movie_main {
   border: 1px solid #2ef4f4;
 }
 
-main .movie .movie_main .movie_blank {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  vertical-align: text-bottom;
-  background-color: #156;
-  font-size: 50px;
-}
-
 main .live {
   padding: 90px 0;
 }
@@ -310,6 +298,62 @@ main .exhibition .exhibition_contents .instructions .table .column div:nth-child
   margin-left: 10px;
 }
 
+main .exhibition .exhibition_contents .instructions .table .column .details_btn {
+  position: relative;
+  background-color: #df5b00;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  margin-left: 20px;
+  outline: none;
+  padding: 5px 5px;
+  font-weight: 600;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:before,
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:after {
+  position: absolute;
+  border-color: transparent;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+  border-style: solid;
+  border-width: 0;
+  content: "";
+  height: 24px;
+  width: 24px;
+}
+
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:before {
+  border-color: #df5b00;
+  border-right-width: 2px;
+  border-top-width: 2px;
+  right: -5px;
+  top: -5px;
+}
+
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:after {
+  border-bottom-width: 2px;
+  border-color: #df5b00;
+  border-left-width: 2px;
+  bottom: -5px;
+  left: -5px;
+}
+
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:hover,
+main .exhibition .exhibition_contents .instructions .table .column .details_btn.hover {
+  background-color: #df5b00;
+}
+
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:hover:before,
+main .exhibition .exhibition_contents .instructions .table .column .details_btn.hover:before,
+main .exhibition .exhibition_contents .instructions .table .column .details_btn:hover:after,
+main .exhibition .exhibition_contents .instructions .table .column .details_btn.hover:after {
+  height: 100%;
+  width: 100%;
+}
+
 main .exhibition .exhibition_contents .maps {
   position: absolute;
   right: 0;
@@ -349,6 +393,37 @@ main .exhibition .note h3 {
 
 main .sales {
   padding: 90px 0;
+}
+
+main .sales .instructions {
+  width: 100%;
+}
+
+main .sales .instructions .table {
+  margin: 10px;
+}
+
+main .sales .instructions .table .column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 15px;
+}
+
+main .sales .instructions .table .column div:nth-child(1) {
+  border: 2px solid #2ef4f43a;
+  border-radius: 10px 0 10px 0;
+  width: 80px;
+  text-align: center;
+  padding: 8px 5px;
+}
+
+main .sales .instructions .table .column div:nth-child(2) {
+  width: 80%;
+  margin-left: 10px;
 }
 
 main .gallery {
