--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -292,18 +292,6 @@ main {
     .movie_main {
       position: relative;
       border: 1px solid #2ef4f4;
-
-      .movie_blank {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        vertical-align: text-bottom;
-        background-color: #156;
-        font-size: 50px;
-      }
     }
   }
 
@@ -346,6 +334,57 @@ main {
             div:nth-child(2) {
               width: 80%;
               margin-left: 10px;
+            }
+
+            .details_btn {
+              position: relative;
+              background-color: #df5b00;
+              border: none;
+              color: #ffffff;
+              cursor: pointer;
+              margin-left: 20px;
+              outline: none;
+              padding: 5px 5px;
+              font-weight: 600;
+              font-size: 14px;
+              font-family: Arial, Helvetica, sans-serif;
+            }
+            .details_btn:before,
+            .details_btn:after {
+              position: absolute;
+              border-color: transparent;
+              -webkit-transition: all 0.25s;
+              transition: all 0.25s;
+              border-style: solid;
+              border-width: 0;
+              content: "";
+              height: 24px;
+              width: 24px;
+            }
+            .details_btn:before {
+              border-color: #df5b00;
+              border-right-width: 2px;
+              border-top-width: 2px;
+              right: -5px;
+              top: -5px;
+            }
+            .details_btn:after {
+              border-bottom-width: 2px;
+              border-color: #df5b00;
+              border-left-width: 2px;
+              bottom: -5px;
+              left: -5px;
+            }
+            .details_btn:hover,
+            .details_btn.hover {
+              background-color: #df5b00;
+            }
+            .details_btn:hover:before,
+            .details_btn.hover:before,
+            .details_btn:hover:after,
+            .details_btn.hover:after {
+              height: 100%;
+              width: 100%;
             }
           }
         }
@@ -390,6 +429,32 @@ main {
 
   .sales {
     padding: 90px 0;
+    .instructions {
+      width: 100%;
+
+      .table {
+        margin: 10px;
+
+        .column {
+          display: flex;
+          align-items: center;
+          margin-bottom: 15px;
+
+          div:nth-child(1) {
+            border: 2px solid #2ef4f43a;
+            border-radius: 10px 0 10px 0;
+            width: 80px;
+            text-align: center;
+            padding: 8px 5px;
+          }
+
+          div:nth-child(2) {
+            width: 80%;
+            margin-left: 10px;
+          }
+        }
+      }
+    }
   }
 
   .gallery {
