--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -204,6 +204,7 @@ header {
   }
 
   .badges {
+    display: none;
     position: absolute;
     top: 100px;
     right: 10px;
@@ -215,6 +216,41 @@ header {
       overflow: hidden;
       margin-bottom: 12px;
       box-shadow: 0 0 10px rgba(80, 221, 253, 0.363);
+    }
+  }
+
+  // 사이드 버튼
+  .badges_small {
+    display: none;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // width: 40px;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 15px 15px;
+
+    filter: drop-shadow(0px 3px 16px rgba(0, 0, 0, 0.6));
+    border: 1px solid #2ef4f4;
+    border-right: 0;
+    border-radius: 10px 0 0 10px;
+    box-sizing: border-box;
+
+    .badge_small {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #000;
+      border-radius: 50%;
+      margin: 5px;
+      padding: 5px;
+      span {
+        font-size: 40px;
+      }
     }
   }
 }
