--- a/CSS/style.css
+++ b/CSS/style.css
@@ -279,6 +279,26 @@ header .badges_small .badge_small span {
   transition: 0.25s;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #2ef4f43b;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
 main .main_kv video {
   width: 100%;
   top: 0;
