--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -30,37 +30,37 @@ html {
     opacity: 0.6;
     // filter: drop-shadow(0px 0px 10px #50dcfd);
   }
-}
 
-.flex {
-  display: flex;
-  flex-wrap: wrap;
-}
+  .flex {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.inner {
-  position: relative;
-  width: 65%;
-  margin: 0 auto;
-}
+  .inner {
+    position: relative;
+    width: 65%;
+    margin: 0 auto;
+  }
 
-.youtube {
-  position: relative;
-  width: 100%;
-  padding-top: 56.25%;
-}
+  .youtube {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%;
+  }
 
-.youtube iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  border: 1px solid #2ef4f4;
-}
+  .youtube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: 1px solid #2ef4f4;
+  }
 
-.center {
-  text-align: center;
+  .center {
+    text-align: center;
+  }
 }
 
 // 배경이미지
@@ -146,6 +146,7 @@ html {
 }
 
 .swiper-prev {
+  top: 1px;
   left: -50px;
 }
 
@@ -169,6 +170,7 @@ header {
   background-color: rgba(0, 0, 0, 0.6);
   z-index: 99;
 
+  // 상단 메뉴바
   .wrapper {
     width: 70%;
     justify-content: space-between;
@@ -203,131 +205,109 @@ header {
     }
   }
 
-  .badges {
-    display: none;
-    position: absolute;
-    top: 100px;
-    right: 10px;
-    width: 12.5rem;
-    // display: none;
-
-    .badge {
-      border-radius: 10px;
-      overflow: hidden;
-      margin-bottom: 12px;
-      box-shadow: 0 0 10px rgba(80, 221, 253, 0.363);
-    }
+  // 사이드 메뉴바
+  .side_menu_bar {
+    position: fixed;
+    width: 48px;
+    top: 50%;
+    right: 0;
+    transform: translate(0%, -50%);
+    opacity: 0.6;
+    transition: 0.5s;
+  }
+  .side_menu_bar:hover {
+    opacity: 1;
+    transition: 0.5s;
   }
 
-  // 사이드 버튼
-  .badges_small {
-    display: none;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    // width: 40px;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 15px 15px;
+  //포트폴리오 안내
+  .저작권안내 {
+    .포트폴리오_공지사항 {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      border-bottom: 50px solid #333;
+      border-right: 50px solid transparent;
+      cursor: pointer;
+      opacity: 0.6;
+      transition: 0.5s;
+    }
 
-    filter: drop-shadow(0px 3px 16px rgba(0, 0, 0, 0.6));
-    border: 1px solid #2ef4f4;
-    border-right: 0;
-    border-radius: 10px 0 0 10px;
-    box-sizing: border-box;
+    .포트폴리오_공지사항:hover {
+      border-bottom: 80px solid #222;
+      border-right: 80px solid transparent;
+      transition: 0.5s;
+    }
 
-    .badge_small {
-      width: 40px;
-      height: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #000;
-      border-radius: 50%;
-      margin: 5px;
-      padding: 5px;
-      span {
-        font-size: 40px;
+    .포트폴리오_공지사항_텍스트 {
+      display: none;
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 10%;
+      background-color: #333;
+      border-radius: 10px;
+      padding: 1em;
+
+      p {
+        font-size: 0.95em;
+        margin: 0;
+      }
+
+      a {
+        font-size: 0.95em;
+        line-height: 1.6em;
+      }
+
+      .포트폴리오_공지사항_닫기버튼 {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        color: #df5b00;
+        cursor: pointer;
+      }
+
+      .포트폴리오_공지사항_닫기버튼:hover {
+        opacity: 0.6;
+        transition: 0.25s;
       }
     }
   }
-}
 
-.포트폴리오_공지사항 {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-bottom: 50px solid #333;
-  border-right: 50px solid transparent;
-  cursor: pointer;
-  opacity: 0.6;
-}
-
-.포트폴리오_공지사항:hover {
-  border-bottom: 80px solid #222;
-  border-right: 80px solid transparent;
-  transition: 0.5s;
-}
-
-.포트폴리오_공지사항_텍스트 {
-  display: none;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 10%;
-  background-color: #333;
-  border-radius: 10px;
-  padding: 1em;
-
-  p {
-    font-size: 0.95em;
-    margin: 0;
-  }
-
-  a {
-    font-size: 0.95em;
-    line-height: 1.6em;
-  }
-
-  .포트폴리오_공지사항_닫기버튼 {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    color: #df5b00;
+  // TOP 버튼
+  .top버튼 {
+    // display: none;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 0;
+    bottom: 0;
+    margin: 20px;
+    font-size: 18px;
+    border: 1px solid #2ef4f4;
+    outline: none;
+    background-color: #000;
+    padding: 15px;
+    border-radius: 5px;
+    color: #fff;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
-  }
-  .포트폴리오_공지사항_닫기버튼:hover {
     opacity: 0.6;
-    transition: 0.25s;
+    transition: 0.5s;
   }
-}
 
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: #2ef4f43b;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: #555;
+  .top버튼:hover {
+    opacity: 1;
+    transition: 0.5s;
+  }
 }
 
 // MAIN
 main {
+  display: none;
+
   .main_kv {
     video {
       width: 100%;
@@ -335,8 +315,10 @@ main {
     }
   }
 
+  // 메카스마 about
   .about {
     padding: 90px 0;
+    // background-color: #156;
 
     ul {
       margin-top: 24px;
@@ -373,12 +355,13 @@ main {
         time {
           line-height: 2em;
           color: #2ef4f4;
-          font-size: 14px;
         }
       }
     }
 
+    // 메카스마 about 카드 슬라이드
     .card {
+      background-color: #156;
       position: relative;
       perspective: 600px;
       display: block;
@@ -548,6 +531,7 @@ main {
               font-weight: 900;
               padding-bottom: 30px;
             }
+
             .전시전_주의사항_닫기버튼 {
               position: absolute;
               top: 10px;
@@ -555,6 +539,7 @@ main {
               color: #df5b00;
               cursor: pointer;
             }
+
             .전시전_주의사항_닫기버튼:hover {
               opacity: 0.6;
               transition: 0.25s;
@@ -642,6 +627,7 @@ main {
 
 //FOOTER
 footer {
+  display: none;
   font-size: 0.875em;
   padding: 1em;
 
