--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,7 +101,6 @@ html .center {
 }
 
 .swiper-prev {
-  top: 1px;
   left: -50px;
 }
 
@@ -168,14 +167,31 @@ header .wrapper nav ul li a span {
 
 header .side_menu_bar {
   position: fixed;
-  width: 48px;
-  top: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
   right: 0;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
+  height: 100%;
   opacity: 0.6;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+
+header .side_menu_bar img {
+  width: 48px;
+  height: 150px;
+}
+
+header .side_menu_bar .box {
+  width: 20vw;
+  height: 100%;
+  background-color: #000;
+  border-left: 1px solid #50dcfd;
+  display: none;
 }
 
 header .side_menu_bar:hover {
@@ -334,7 +350,6 @@ main .about ul li .text time {
 }
 
 main .about .card {
-  background-color: #156;
   position: relative;
   -webkit-perspective: 600px;
           perspective: 600px;
@@ -617,7 +632,6 @@ main .othersite ul li {
 }
 
 footer {
-  display: none;
   font-size: 0.875em;
   padding: 1em;
 }
