--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -152,7 +152,6 @@ html {
 }
 
 .swiper-prev {
-  top: 1px;
   left: -50px;
 }
 
@@ -214,12 +213,24 @@ header {
   // 사이드 메뉴바
   .side_menu_bar {
     position: fixed;
-    width: 48px;
-    top: 50%;
+    display: flex;
+    align-items: center;
+    top: 0;
     right: 0;
-    transform: translate(0%, -50%);
+    height: 100%;
     opacity: 0.6;
     transition: 0.5s;
+    img {
+      width: 48px;
+      height: 150px;
+    }
+    .box {
+      width: 20vw;
+      height: 100%;
+      background-color: #000;
+      border-left: 1px solid #50dcfd;
+      display: none;
+    }
   }
 
   .side_menu_bar:hover {
@@ -327,7 +338,6 @@ main {
   // 메카스마 about
   .about {
     padding: 90px 0;
-    // background-color: #156;
 
     ul {
       margin-top: 24px;
@@ -370,7 +380,6 @@ main {
 
     // 메카스마 about 카드 슬라이드
     .card {
-      background-color: #156;
       position: relative;
       perspective: 600px;
       display: block;
@@ -562,7 +571,6 @@ main {
         right: 0;
         bottom: 0;
         width: 40%;
-        // background-color: #156;
       }
     }
 
@@ -636,7 +644,7 @@ main {
 
 //FOOTER
 footer {
-  display: none;
+  // display: none;
   font-size: 0.875em;
   padding: 1em;
 
